--- a/app/src/main/res/layout/addeditgrammar_act.xml
+++ b/app/src/main/res/layout/addeditgrammar_act.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_add_grammar"
+            android:id="@+id/fab_add_grammar_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
