--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,10 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
+
+     <!--  句子列表 -->
+    <dimen name="sentences_item_padding_button">8dp</dimen>
+    <dimen name="sentences_item_padding_top">13dp</dimen>
+    <dimen name="sentences_item_content_size">16sp</dimen>
+    <dimen name="sentences_item_translation_size">13sp</dimen>
 </resources>
