--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
 
      <!--  句子列表 -->
     <dimen name="sentences_item_padding_button">8dp</dimen>
+    <dimen name="sentences_item_padding_tip">2dp</dimen>
     <dimen name="sentences_item_padding_top">13dp</dimen>
     <dimen name="sentences_item_content_size">16sp</dimen>
     <dimen name="sentences_item_translation_size">13sp</dimen>
