--- a/app/src/main/res/layout/grammardetail_act.xml
+++ b/app/src/main/res/layout/grammardetail_act.xml
@@ -18,7 +18,7 @@
             android:layout_height="match_parent" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_edit_task"
+            android:id="@+id/fab_edit_grammar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
