--- a/app/src/main/res/layout/sentencedetail_act.xml
+++ b/app/src/main/res/layout/sentencedetail_act.xml
@@ -19,7 +19,7 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_edit_task"
+            android:id="@+id/fab_edit_sentence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
