--- a/app/src/main/res/layout/sentence_item.xml
+++ b/app/src/main/res/layout/sentence_item.xml
@@ -3,34 +3,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/sentences_item_padding_button"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/sentences_item_padding_top"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="match_parent"
+    <CheckBox
+        android:id="@+id/select"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/sentence_content"
-        android:textSize="@dimen/sentences_item_content_size"/>
+        android:layout_gravity="center_vertical"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
-    <TextView
-        android:id="@+id/translation"
-        android:layout_marginTop="@dimen/sentences_item_padding_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/sentences_item_translation_size"/>
-
-    <!-- 存放语法标签 -->
     <LinearLayout
-        android:id="@+id/grammars"
-        android:layout_marginTop="@dimen/sentences_item_padding_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/sentence_content"
+            android:textSize="@dimen/sentences_item_content_size"/>
+
+        <TextView
+            android:id="@+id/translation"
+            android:layout_marginTop="@dimen/sentences_item_padding_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sentences_item_translation_size"/>
+
+        <!-- 存放语法标签 -->
+        <LinearLayout
+            android:id="@+id/grammars"
+            android:layout_marginTop="@dimen/sentences_item_padding_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        </LinearLayout>
 
     </LinearLayout>
 
