--- a/app/src/main/res/layout/grammars_frag.xml
+++ b/app/src/main/res/layout/grammars_frag.xml
@@ -8,7 +8,36 @@
     <ListView
         android:id="@+id/grammars_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
     </ListView>
+    <RelativeLayout
+        android:id="@+id/sentences_edit_rela"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:orientation="horizontal"
+        android:visibility="gone">
+        <CheckBox
+            android:id="@+id/allSelect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sentences_edit_allselect"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/allSelect"/>
+        <Button
+            android:id="@+id/deletes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="@android:color/holo_red_dark"
+            android:enabled="false"
+            android:text="@string/edit_delete"/>
+    </RelativeLayout>
 </LinearLayout>
