--- a/app/src/main/res/menu/grammars_frag_menu.xml
+++ b/app/src/main/res/menu/grammars_frag_menu.xml
@@ -19,7 +19,11 @@
     <item
         android:id="@+id/grammars_edit"
         android:title="@string/grammars_menu_edit"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/menu_cancel"
+        android:title="@string/menu_cancel"
+        app:showAsAction="always" />
     <item
         android:id="@+id/grammars_setting"
         android:title="@string/grammars_menu_setting"
