--- a/app/src/main/res/layout/grammardetail_act.xml
+++ b/app/src/main/res/layout/grammardetail_act.xml
@@ -17,15 +17,31 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_edit_grammar"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_edit"
-            app:fabSize="normal"
+            android:orientation="vertical"
             app:layout_anchor="@id/contentFrame"
-            app:layout_anchorGravity="bottom|right|end" />
+            android:layout_margin="@dimen/fab_margin"
+            app:layout_anchorGravity="bottom|right|end">
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_edit_grammar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ic_edit"
+                app:fabSize="normal"/>
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fab_delete_grammar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/fab_margin"
+                android:src="@drawable/ic_delete"
+                app:fabSize="normal"
+                app:layout_anchor="@id/fab_edit_grammar"
+                app:layout_anchorGravity="bottom|right|end"/>
+
+        </LinearLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
