--- a/app/src/main/res/layout/grammardetail_act.xml
+++ b/app/src/main/res/layout/grammardetail_act.xml
@@ -28,7 +28,9 @@
                 android:id="@+id/fab_edit_grammar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/fab_margin"
+                android:layout_marginLeft="@dimen/fab_margin"
+                android:layout_marginRight="@dimen/fab_margin"
+                android:layout_marginBottom="0dp"
                 android:src="@drawable/ic_edit"
                 app:fabSize="normal"/>
             <android.support.design.widget.FloatingActionButton
