接口全部使用网络请求完成，搜索菜单未完成

--- a/app/src/main/res/menu/sentences_frag_menu.xml
+++ b/app/src/main/res/menu/sentences_frag_menu.xml
@@ -28,4 +28,10 @@
         android:id="@+id/sentences_setting"
         android:title="@string/sentences_menu_setting"
         app:showAsAction="never" />
+
+    <item android:id="@+id/search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        android:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.widget.SearchView" />
 </menu>
