--- a/app/src/main/res/menu/sentences_frag_menu.xml
+++ b/app/src/main/res/menu/sentences_frag_menu.xml
@@ -15,7 +15,16 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:actionViewClass="android.support.v7.widget.SearchView">
+
+    <item android:id="@+id/search"
+        android:title="@string/search_title"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
+
     <item
         android:id="@+id/sentences_edit"
         android:title="@string/sentences_menu_edit"
@@ -29,9 +38,7 @@
         android:title="@string/sentences_menu_setting"
         app:showAsAction="never" />
 
-    <item android:id="@+id/search"
-        android:title="@string/search_title"
-        android:icon="@drawable/ic_search"
-        android:showAsAction="collapseActionView|ifRoom"
-        android:actionViewClass="android.widget.SearchView" />
+
+
+
 </menu>
