--- a/app/src/main/res/layout/main_frag.xml
+++ b/app/src/main/res/layout/main_frag.xml
@@ -12,4 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/grammar_btn"/>
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_btn"/>
 </LinearLayout>
