--- a/app/src/main/res/layout/serach_frag.xml
+++ b/app/src/main/res/layout/serach_frag.xml
@@ -10,4 +10,16 @@
         android:layout_weight="1">
 
     </ListView>
+
+    <Button
+        android:id="@+id/search_sentences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_sentences"/>
+
+    <Button
+        android:id="@+id/search_grammars"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_sentences"/>
 </LinearLayout>
