--- a/app/src/main/res/menu/sentences_frag_menu.xml
+++ b/app/src/main/res/menu/sentences_frag_menu.xml
@@ -21,7 +21,9 @@
     <item android:id="@+id/search"
         android:title="@string/search_title"
         android:icon="@drawable/ic_search"
-        app:showAsAction="always"/>
+        app:showAsAction="collapseActionView|ifRoom"
+        android:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 
     <item
         android:id="@+id/sentences_edit"
