--- a/app/src/main/res/layout/sentences_frag.xml
+++ b/app/src/main/res/layout/sentences_frag.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<com.englishlearn.myapplication.sentences.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/refresh_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:paddingBottom="@dimen/activity_vertical_margin">
+
+<LinearLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:orientation="vertical">
+
     <ListView
         android:id="@+id/sentences_listview"
         android:layout_width="match_parent"
@@ -39,3 +46,8 @@
             android:text="@string/edit_delete"/>
     </RelativeLayout>
 </LinearLayout>
+
+</com.englishlearn.myapplication.sentences.ScrollChildSwipeRefreshLayout>
+
+
+
