--- a/app/src/main/res/layout/sentences_frag.xml
+++ b/app/src/main/res/layout/sentences_frag.xml
@@ -10,13 +10,13 @@ android:paddingBottom="@dimen/activity_vertical_margin">
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ListView
+    <com.englishlearn.myapplication.ui.LoadMoreListView
         android:id="@+id/sentences_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
 
-    </ListView>
+    </com.englishlearn.myapplication.ui.LoadMoreListView>
     <RelativeLayout
         android:id="@+id/sentences_edit_rela"
         android:layout_width="match_parent"
