--- a/app/src/main/res/layout/main_frag.xml
+++ b/app/src/main/res/layout/main_frag.xml
@@ -18,4 +18,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/search_btn"/>
+
+    <Button
+        android:id="@+id/searchsentences"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_sentences_btn"/>
+
+    <ImageButton
+        android:id="@+id/search_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:src="@drawable/ic_keyboard_arrow_right_grey_24dp"/>
 </LinearLayout>
