--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,9 @@
     <color name="sentence_translation">#5F5F5F</color>
     <color name="sentence_tip_around">#dbdfde</color>
 
+    <!-- 搜索匹配颜色  -->
+    <color name="search_matching">#44b712</color>
+    <color name="sielkf">#44b712</color>
+
 
 </resources>
