登陆模块基本功能测试页面完成

--- a/app/src/main/res/layout/registeruser_frag.xml
+++ b/app/src/main/res/layout/registeruser_frag.xml
@@ -198,6 +198,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/registerbymobile" />
+
+                    <Button
+                        android:id="@+id/emailverify"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/emailverify" />
+
+                    <Button
+                        android:id="@+id/smscodeverify"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/smscodeverify" />
                 </LinearLayout>
 
                 <LinearLayout
