--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,10 +5,15 @@
 
     <dimen name="fab_margin">16dp</dimen>
 
-     <!--  句子列表 -->
+    <!--  句子列表 -->
     <dimen name="sentences_item_padding_button">8dp</dimen>
     <dimen name="sentences_item_padding_tip">2dp</dimen>
     <dimen name="sentences_item_padding_top">13dp</dimen>
     <dimen name="sentences_item_content_size">16sp</dimen>
     <dimen name="sentences_item_translation_size">13sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
+
+    <dimen name="navview_profile_image_size">40dp</dimen>
 </resources>
