--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -17,41 +17,32 @@
         app:contentInsetLeft="0dp"
         app:contentInsetStart="0dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_horizontal">
+            android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/basis"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="基础"
-                android:textColor="@color/facebook_blue3"
-                android:background="?android:attr/selectableItemBackground"/>
-            <Button
-                android:id="@+id/advance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="进阶"
-                android:textColor="#eeeeee"
-                android:background="?android:attr/selectableItemBackground"/>
-            <Button
-                android:id="@+id/advanced"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="高级"
-                android:textColor="@android:color/white"
-                android:background="?android:attr/selectableItemBackground"/>
 
-        </LinearLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:tabMode="scrollable"
+                app:tabMaxWidth="70dp"
+                android:layout_centerInParent="true"
+                app:tabIndicatorHeight="0dp"/>
+
+
+
+        </RelativeLayout>
 
     </android.support.v7.widget.Toolbar>
 
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"/>
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:layout_below="@id/toolbar" />
+
 </RelativeLayout>
