--- a/app/src/main/res/layout/phoneticssymbolsitem.xml
+++ b/app/src/main/res/layout/phoneticssymbolsitem.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     >
 
     <android.support.v7.widget.CardView
@@ -11,7 +12,10 @@
         android:layout_margin="15dp"
         android:padding="16dp"
         app:cardCornerRadius="5dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground">
 
         <com.englishlearn.myapplication.ui.SquareRelativeLayout
             android:layout_width="match_parent"
