--- a/app/src/main/res/layout/grammar_item.xml
+++ b/app/src/main/res/layout/grammar_item.xml
@@ -25,7 +25,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/ipaname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/sentences_item_content_size"
