--- a/app/src/main/res/layout/phoneticssymbolsitem.xml
+++ b/app/src/main/res/layout/phoneticssymbolsitem.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginTop="10dp"
+    android:layout_width="match_parent"
+    android:padding="16dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
-    >
-
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:padding="16dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:layout_height="72dp">
 
-        <com.englishlearn.myapplication.ui.SquareRelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp">
-            <TextView
-                android:id="@+id/phonetics"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="456"/>
-        </com.englishlearn.myapplication.ui.SquareRelativeLayout>
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:id="@+id/phonetics_name"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:clickable="false"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="456"/>
+
+    </RelativeLayout>
 
 
-</FrameLayout>
+</android.support.v7.widget.CardView>
+
