单词收藏列表完成，单词列表完成

--- a/app/src/main/res/layout/grammar_frag.xml
+++ b/app/src/main/res/layout/grammar_frag.xml
@@ -3,9 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+
+    <ListView
+        android:id="@+id/grammars_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="语法"/>
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+    </ListView>
 
 </LinearLayout>
