--- a/app/src/main/res/layout/loadmorelistview_footer_layout.xml
+++ b/app/src/main/res/layout/loadmorelistview_footer_layout.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/list_item_footer"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
+	android:layout_height="50dp"
 	android:gravity="center"
 	android:orientation="vertical"
 	android:padding="15dp" >
 
 	<LinearLayout
 		android:id="@+id/load_more"
+		android:clickable="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
@@ -30,6 +31,7 @@
 
 	<LinearLayout
 		android:id="@+id/load_end"
+		android:clickable="false"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
