--- a/app/src/main/res/layout/grammars_item.xml
+++ b/app/src/main/res/layout/grammars_item.xml
@@ -10,6 +10,15 @@
     android:paddingTop="@dimen/sentences_item_padding_top"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+
+    <CheckBox
+        android:id="@+id/select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
