增加单词详情页面

--- a/app/src/main/res/layout/testmain_frag.xml
+++ b/app/src/main/res/layout/testmain_frag.xml
@@ -114,6 +114,12 @@
             android:layout_height="wrap_content"
             android:text="@string/tractatecollect_btn"/>
 
+        <Button
+            android:text="WordDetail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/worddetail" />
+
     </LinearLayout>
 
 </ScrollView>
