--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="nav_header_height">160dp</dimen>
 
     <dimen name="navview_profile_image_size">40dp</dimen>
+
+    <dimen name="detail_backdrop_height">256dp</dimen>
 </resources>
