--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,13 @@
     <dimen name="navview_profile_image_size">40dp</dimen>
 
     <dimen name="detail_backdrop_height">256dp</dimen>
+
+    <dimen name="space_xxxlarge">48dp</dimen>
+    <dimen name="space_xxlarge">32dp</dimen>
+    <dimen name="space_xlarge">24dp</dimen>
+    <dimen name="space_large">16dp</dimen>
+    <dimen name="space_normal">8dp</dimen>
+    <dimen name="space_small">4dp</dimen>
+
+
 </resources>
