--- a/app/src/main/res/layout/mywordgroups_frag.xml
+++ b/app/src/main/res/layout/mywordgroups_frag.xml
@@ -5,11 +5,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </android.support.v7.widget.RecyclerView>
+        <Button
+            android:id="@+id/createwordgroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="创建"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </LinearLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
