句子相关接口及实体类修改完成，保存用户信息接口及实现完成

--- a/app/src/main/res/layout/registeruser_frag.xml
+++ b/app/src/main/res/layout/registeruser_frag.xml
@@ -20,7 +20,22 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/user_objectid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
                     android:id="@+id/user_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/user_mobile"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/user_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
